test_datasets/generated/syntax_errors/error_2_expected.py
def validate_user(age):
    if age >= 18:
        print("Adult")
    else:
        print("Minor")
